change structure add form add forms utils

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,6 +10,9 @@
   "search": "Search",
   "updateRequest": "Update Request",
   "createRequest": "Create Request",
+  "submit": "Submit",
+  "saveDraft": "Save as draft",
+  "cancel": "Cancel",
   "item": {
     "id": "ID",
     "budget": "Budget",
